fixed some typos

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon1.ico">
-    <!--
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
-    -->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Eric Pak</title>
   </head>
   <body>
